--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 </div>
             </div>
             <div class="footerRightMenu">
-                <span class="copyright">@Areeb Fawad. All rights reserved. 2024.</span>
+                <span class="copyright"><a href="https://areebfawad.github.io/portfolio/">@Areeb Fawad.</a>  All rights reserved. 2024.</span>
             </div>
         </div>
     </footer>
